--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+/* ? Importacion general de libreria 'Bulma' */
+
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
+
 .App {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   height: 100vh;
   width: 100vw;
   overflow: hidden;
