Componente grid en prueba

--- a/src/components/BackgroundsHome/BackgroundsHome.css
+++ b/src/components/BackgroundsHome/BackgroundsHome.css
@@ -15,7 +15,8 @@
   }
 
   #image_background_active {
-    border: none;
+    /* border: 2px solid sienna; */
+    width: 100%;
     height: 100%;
     object-fit: cover;
     position: fixed;
@@ -25,24 +26,5 @@
   .blur-image {
     animation: blur-image 2.5s ease-in-out;
     filter: grayscale(30%);
-  }
-
-  #tituloOwnExpenses {
-    background-color: rgba(0, 0, 0, 0.904);
-    color: white;
-    display: inline;
-    padding: 10px;
-    margin-top: 5rem;
-    position: absolute;
-    width: 11em;
-    border-radius: 0px 13px 13px 0px;
-    font-size: 1.5em;
-    text-align: center;
-    text-transform: uppercase;
-  }
-
-  #tituloOwnExpenses:hover {
-    width: 100%;
-    transition: all 1s ease-in-out;
   }
 }
