--- a/src/components/TituloExpenses/TituloExpenses.css
+++ b/src/components/TituloExpenses/TituloExpenses.css
@@ -1,20 +1,25 @@
 @media screen and (min-width: 360px) {
+  #contenedor-tituloExpenses {
+    /* border: 2px solid red; */
+    position: absolute;
+    margin-top: 5rem;
+    width: 70%;
+    text-align: center;
+    cursor: pointer;
+  }
+
   #tituloOwnExpenses {
     background-color: rgba(0, 0, 0, 0.904);
     color: white;
-    display: inline;
-    padding: 10px;
-    position: absolute;
-    width: 11em;
     border-radius: 0px 13px 13px 0px;
-    font-size: 1.5em;
-    text-align: center;
     text-transform: uppercase;
-    margin-top: 5rem;
+    font-size: 1.3rem;
+    padding: 10px;
   }
 
-  #tituloOwnExpenses:hover {
+  #contenedor-tituloExpenses:hover {
     width: 100%;
-    transition: all 1s ease-in-out;
+    transition: all 0.7s ease;
+    border-radius: 1px;
   }
 }
