--- a/src/components/Counter/Counter.css
+++ b/src/components/Counter/Counter.css
@@ -2,7 +2,7 @@
   #contenedor-general-counter {
     /* border: 2px solid blueviolet; */
     position: absolute;
-    margin-top: 22rem;
+    margin-top: 24rem;
     width: 100%;
     text-align: center;
     font-size: 3rem;
@@ -12,11 +12,25 @@
   #texto-counter{
       /* border: 2px solid greenyellow; */
       display: inline-block;
-      background-color: rgba(0, 0, 0, 0.911);
-      backdrop-filter: blur(7px);
-      padding: 10px;
-      border-radius: 5px;
-      font-weight: 700;
-      padding: 1rem 2rem;
+      background-color: rgba(0, 0, 0, 0.736);
+      backdrop-filter: blur(10px);
+      border-radius: 8px;
+      font-weight: 400;
+      padding: .5rem 3rem;
+      letter-spacing: 1px;
+  }
+}
+
+/* 414px - Iphone 11 */
+@media screen and (min-width: 414px) {
+  #contenedor-general-counter {
+    /* border: 2px solid blueviolet; */
+    margin-top: 25rem;
+    font-size: 3rem;
+  }
+
+  #texto-counter{
+      /* border: 2px solid greenyellow; */
+      padding: .5rem 3.5rem;
   }
 }
