--- a/src/components/GridMenuHome/GridMenuHome.css
+++ b/src/components/GridMenuHome/GridMenuHome.css
@@ -20,7 +20,7 @@
   /* Contenedor derecho - horizontal */
   #contenedor-horizontal-derecho_gridMenuHome {
     /* border: 2px solid sandybrown; */
-    background-color: rgba(0, 0, 0, 0.966);
+    background-color: rgba(0, 0, 0, 0.75);
     width: 55%;
     display: flex;
     justify-content: center;
@@ -31,7 +31,8 @@
   /* Contenedores de los iconos verticales */
   .contenedorIconVertical_gridMenuHome {
     /* border: 2px solid green; */
-    background-color: rgba(0, 0, 0, 0.904);
+    background-color: rgba(0, 0, 0, 0.75);
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,13 +42,33 @@
   }
 
   /* Cada icono */
-  .icon-menuGridHome{
-      color: rgb(184, 184, 184);
-      font-size: 2rem;
+  .icon-menuGridHome {
+    color: rgb(184, 184, 184);
+    font-size: 2rem;
   }
 
   /* Icono restart */
-  .icon-restart_menuGridHome{
-      font-size: 2.5rem;
+  .icon-restart_menuGridHome {
+    font-size: 2.5rem;
+  }
+}
+
+/*  */
+
+@media screen and (min-width: 414px) {
+  #contenedor_gridMenuHome {
+    /* border: 2px solid red; */
+    margin-top: 9rem;
+  }
+
+  /* Cada icono */
+  .icon-menuGridHome {
+    color: rgb(207, 207, 207);
+    font-size: 2rem;
+  }
+
+  /* Icono restart */
+  .icon-restart_menuGridHome {
+    font-size: 2.8rem;
   }
 }
