--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,13 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  /* background-image: url(https://marketplace.canva.com/MADGx5avvSA/4/screen_2x/canva-beach-at-sunset-MADGx5avvSA.jpg);
-  background-size: cover; */
+}
+
+@media screen and (min-width:1440px) {
+  .App {
+    background-size: contain !important;
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 100% !important;
+  }
 }
