--- a/src/components/GridMenuHome/GridMenuHome.css
+++ b/src/components/GridMenuHome/GridMenuHome.css
@@ -1,3 +1,4 @@
+/** 360px - Mobile Android */
 @media screen and (min-width: 360px) {
   #contenedor_gridMenuHome {
     /* border: 2px solid red; */
@@ -53,7 +54,7 @@
   }
 }
 
-/*  */
+/** 414px - IPhone 11  */
 
 @media screen and (min-width: 414px) {
   #contenedor_gridMenuHome {
@@ -63,12 +64,53 @@
 
   /* Cada icono */
   .icon-menuGridHome {
-    color: rgb(207, 207, 207);
+    color: rgb(231, 231, 231);
     font-size: 2rem;
   }
 
   /* Icono restart */
   .icon-restart_menuGridHome {
     font-size: 2.8rem;
+    color: rgb(231, 231, 231);
+  }
+}
+
+/** 1440px - Macbook y Laptops */
+@media screen and (min-width: 1400px) {
+  /* Contenedor Grid Menu */
+  #contenedor_gridMenuHome {
+   /*  border: 4px solid greenyellow; */
+    margin-top: 12rem;
+    width: 100%;
+    flex-direction: column;
+    gap: 1rem;
+    width: 30%;
+    margin-left: 3rem;
+  }
+
+  /* Contenedor izquierdo - vertical */
+  #contenedor-vertical-izquierdo_gridMenuHome {
+    /* border: 2px solid blue; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  /* Contenedor derecho - horizontal */
+  #contenedor-horizontal-derecho_gridMenuHome {
+    /* border: 2px solid sandybrown; */
+    width: 100%;
+    cursor: pointer;
+    height: 5rem;
+  }
+
+  /* Contenedores de los iconos verticales */
+  .contenedorIconVertical_gridMenuHome {
+    /* border: 2px solid red; */
+    width: 100%;
+    cursor: pointer;
+    height: 5rem;
   }
 }
