Add: more changes en V2

--- a/src/components/GridMenuHome/GridMenuHome.css
+++ b/src/components/GridMenuHome/GridMenuHome.css
@@ -1,3 +1,9 @@
+:root {
+  --altura--box: 4rem;
+  --tamaño--icons: 2rem;
+  --background--icons: black;
+}
+
 /** 360px - Mobile Android */
 @media screen and (min-width: 360px) {
   #contenedor_gridMenuHome {
@@ -8,7 +14,7 @@
     display: flex;
   }
 
-  /* Contenedor izquierdo - vertical */
+  /* Contenedor izquierdo - vertical - 1  */
   #contenedor-vertical-izquierdo_gridMenuHome {
     /* border: 2px solid blue; */
     width: 40%;
@@ -18,7 +24,7 @@
     gap: 10px;
   }
 
-  /* Contenedor derecho - horizontal */
+  /* Contenedor derecho - horizontal - 2 */
   #contenedor-horizontal-derecho_gridMenuHome {
     /* border: 2px solid sandybrown; */
     background-color: rgba(0, 0, 0, 0.75);
@@ -79,16 +85,15 @@
 @media screen and (min-width: 1400px) {
   /* Contenedor Grid Menu */
   #contenedor_gridMenuHome {
-   /*  border: 4px solid greenyellow; */
-    margin-top: 12rem;
-    width: 100%;
+    /* border: 4px solid greenyellow; */
+    margin-top: 15rem;
+    margin-left: 92%;
+    width: 8%;
     flex-direction: column;
     gap: 1rem;
-    width: 30%;
-    margin-left: 3rem;
   }
 
-  /* Contenedor izquierdo - vertical */
+  /* Contenedor izquierdo - vertical - 1 */
   #contenedor-vertical-izquierdo_gridMenuHome {
     /* border: 2px solid blue; */
     width: 100%;
@@ -98,12 +103,13 @@
     gap: 1rem;
   }
 
-  /* Contenedor derecho - horizontal */
+  /* Contenedor derecho - horizontal - 2 */
   #contenedor-horizontal-derecho_gridMenuHome {
     /* border: 2px solid sandybrown; */
     width: 100%;
     cursor: pointer;
-    height: 5rem;
+    height: var(--altura--box);
+    background-color: var(--background--icons);
   }
 
   /* Contenedores de los iconos verticales */
@@ -111,6 +117,19 @@
     /* border: 2px solid red; */
     width: 100%;
     cursor: pointer;
-    height: 5rem;
+    height: var(--altura--box);
+    background-color: var(--background--icons);
+  }
+
+  /* Cada icono */
+  .icon-menuGridHome {
+    color: rgb(231, 231, 231);
+    font-size: var(--tamaño--icons);
+    position: relative;
+  }
+
+  /* Icono restart */
+  .icon-restart_menuGridHome {
+    font-size: var(--tamaño--icons);
   }
 }
