--- a/src/components/MenuFooter/MenuFooter.css
+++ b/src/components/MenuFooter/MenuFooter.css
@@ -1,4 +1,6 @@
+/* 360px - Mobile Android */
 @media screen and (min-width: 360px) {
+  /* Contenedor General del Menu */
   #contenedor-general_MenuFooter {
     /* border: 2px solid lightcoral; */
     position: fixed;
@@ -8,6 +10,7 @@
     justify-content: center;
   }
 
+  /* SubContenedor de los Botones */
   #subcontenedor-botones__MenuFooter {
     /* border: 2px solid greenyellow; */
     display: flex;
@@ -18,6 +21,7 @@
     border-radius: 30px;
   }
 
+  /* Contenedor Directo delos Botones */
   .contenedores-botones_MenuFooter {
     /* border: 2px solid red; */
     height: 5rem;
@@ -28,38 +32,74 @@
     font-size: 1.7rem;
   }
 
+  /* Propiedades del Icono Especificamente */
   .icono-rest-add__MenuFooter {
     color: white;
   }
 }
 
 /* 414px - Iphone 11 */
-
 @media screen and (min-width: 414px) {
-    #contenedor-general_MenuFooter {
-      /* border: 2px solid lightcoral; */
-      margin-top: 84vh;
-    }
-  
-    #subcontenedor-botones__MenuFooter {
-      /* border: 2px solid greenyellow; */
-      width: 87%;
-      border-radius: 30px;
-    }
-  
-    .contenedores-botones_MenuFooter {
-      /* border: 2px solid red; */
-      height: 5.5rem;
-      width: 40%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 1.7rem;
-    }
-  
-    .icono-rest-add__MenuFooter {
-      color: white;
-      position: relative;
-    }
+  /* Contenedor General del Menu */
+  #contenedor-general_MenuFooter {
+    /* border: 2px solid lightcoral; */
+    margin-top: 84vh;
   }
-  
+
+  /* SubContenedor de los Botones */
+  #subcontenedor-botones__MenuFooter {
+    /* border: 2px solid greenyellow; */
+    width: 87%;
+    border-radius: 30px;
+  }
+
+  /* Contenedor Directo delos Botones */
+  .contenedores-botones_MenuFooter {
+    /* border: 2px solid red; */
+    height: 5.5rem;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.7rem;
+  }
+
+  /* Propiedades del Icono Especificamente */
+  .icono-rest-add__MenuFooter {
+    color: white;
+    position: relative;
+  }
+}
+
+/* 1440px - Macbook Air y Laptops */
+@media screen and (min-width: 414px) {
+  /* Contenedor General del Menu */
+  #contenedor-general_MenuFooter {
+    border: 4px solid greenyellow;
+    margin-top: 84vh;
+  }
+
+  /* SubContenedor de los Botones */
+  #subcontenedor-botones__MenuFooter {
+    /* border: 2px solid greenyellow; */
+    width: 87%;
+    border-radius: 30px;
+  }
+
+  /* Contenedor Directo delos Botones */
+  .contenedores-botones_MenuFooter {
+    /* border: 2px solid red; */
+    height: 5.5rem;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.7rem;
+  }
+
+  /* Propiedades del Icono Especificamente */
+  .icono-rest-add__MenuFooter {
+    color: white;
+    position: relative;
+  }
+}
