--- a/src/components/Counter/Counter.css
+++ b/src/components/Counter/Counter.css
@@ -51,6 +51,8 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    border-bottom: 1px solid gainsboro;
+    border-top: 1px solid gainsboro;
   }
 
   /** Numero de Contador */
