--- a/src/components/MenuFooter/MenuFooter.css
+++ b/src/components/MenuFooter/MenuFooter.css
@@ -75,31 +75,44 @@
 @media screen and (min-width: 414px) {
   /* Contenedor General del Menu */
   #contenedor-general_MenuFooter {
-    border: 4px solid greenyellow;
-    margin-top: 84vh;
+    /* border: 4px solid greenyellow; */
+    margin-top: 68vh;
+    justify-content: start;
   }
 
   /* SubContenedor de los Botones */
   #subcontenedor-botones__MenuFooter {
-    /* border: 2px solid greenyellow; */
-    width: 87%;
-    border-radius: 30px;
+    /* border: 2px solid skyblue; */
+    border-radius: 0;
+    background-color: transparent;
+    backdrop-filter: blur(0);
+    width: 30%;
+    gap: 3rem;
+    margin-left: 1rem;
   }
 
-  /* Contenedor Directo delos Botones */
+  /* Contenedor Directo de los Botones */
   .contenedores-botones_MenuFooter {
-    /* border: 2px solid red; */
-    height: 5.5rem;
-    width: 40%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.7rem;
+    /* border: 2px solid crimson; */
+    border-radius: 50%;
+    font-size: 1.5rem;
+    background-color: black;
+    height: 8rem;
+    width: 8rem;
+    flex-direction: column-reverse;
+    gap: .5rem;
+    cursor: pointer;
+  }
+
+  /* Propiedades de los Texto - (Add, Subtract) */
+  .Texto_Icono_MF{
+    color: gray;
+    font-size: 1.1rem;
+    font-weight: 400;
   }
 
   /* Propiedades del Icono Especificamente */
   .icono-rest-add__MenuFooter {
     color: white;
-    position: relative;
   }
 }
